--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,6 +17,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/view_margin_normal"
-        android:text="User:unknown"/>
+        android:layout_margin="@dimen/view_margin_normal"/>
 </RelativeLayout>
