--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="colorVectorWhite">#F0F1F1</color>
     <color name="colorGrayNormal">#737373</color>
+    <color name="colorGrayLight">#FAFAFA</color>
 
     <color name="colorNormal">#2196F3</color>
     <color name="colorError">#FF5252</color>
