--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xseec.eds.activity.DeviceListActivity">
-    <include layout="@layout/toolbar"/>
+    tools:context="com.xseec.eds.activity.DetailActivity">
     <FrameLayout
         android:id="@+id/layout_container"
         android:layout_width="match_parent"
