--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,8 @@
     <dimen name="view_margin_small">8dp</dimen>
     <dimen name="view_margin_tiny">4dp</dimen>
     <dimen name="view_header_hei">180dp</dimen>
-    <dimen name="circle_image_size">64dp</dimen>
-    <dimen name="circle_image_size_small">24dp</dimen>
+    <dimen name="image_size">64dp</dimen>
+    <dimen name="image_size_small">24dp</dimen>
     <dimen name="card_image_hei">240dp</dimen>
     <dimen name="button_radius">24dp</dimen>
     <dimen name="dialog_corners">2dp</dimen>
@@ -16,6 +16,10 @@
 
     <dimen name="device_list_size">80dp</dimen>
 
+    <!--Detail-->
+    <dimen name="card_width_port">80dp</dimen>
+    <dimen name="card_width_land">120dp</dimen>
+
     <dimen name="font_small">12sp</dimen>
     <dimen name="font_normal">14sp</dimen>
     <dimen name="font_big">20sp</dimen>
@@ -23,4 +27,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
