--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="TransStatusBarTheme" parent="AppTheme">
-    </style>
+    <style name="TransStatusBarTheme" parent="AppTheme"></style>
 
     <style name="LinearLayoutHorBasicItem">
         <item name="android:layout_width">match_parent</item>
@@ -19,8 +18,8 @@
     </style>
 
     <style name="ImageBasicItem">
-        <item name="android:layout_width">@dimen/circle_image_size_small</item>
-        <item name="android:layout_height">@dimen/circle_image_size_small</item>
+        <item name="android:layout_width">@dimen/image_size_small</item>
+        <item name="android:layout_height">@dimen/image_size_small</item>
     </style>
 
     <style name="TextBasicItemName">
@@ -45,7 +44,18 @@
         <item name="android:background">@color/colorDivider</item>
     </style>
 
-    <style name="DialogActivity" parent="AppTheme">
+    <style name="TextInHalfParentHeight">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="TextInHalfParentHeightTitle" parent="TextInHalfParentHeight">
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="DialogActivityBase" parent="AppTheme">
         <!--设置dialog的背景-->
         <item name="android:windowBackground">@android:color/transparent</item>
         <!--设置Dialog的windowFrame框为无-->
@@ -63,6 +73,13 @@
         <!--背景是否模糊显示-->
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
+    <style name="DialogActivity" parent="DialogActivityBase">
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
 </resources>
