--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -1,41 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/view_margin_normal">
+
     <ImageView
         android:id="@+id/image_device"
         android:layout_width="@dimen/device_list_size"
         android:layout_height="@dimen/device_list_size"
         android:layout_marginRight="@dimen/view_margin_normal"
         android:layout_marginVertical="@dimen/view_margin_small"
-        tools:src="@drawable/device_a65"/>
+        tools:src="@drawable/device_a65" />
+
     <TextView
         android:id="@+id/text_device_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image_device"
         android:layout_marginVertical="@dimen/view_margin_small"
+        android:layout_toRightOf="@id/image_device"
         android:textSize="@dimen/font_big"
         tools:text="ACB#415" />
+
     <TextView
-        android:id="@+id/text_device_status"
+        android:id="@+id/text_device_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image_device"
         android:layout_below="@id/text_device_name"
         android:layout_marginVertical="@dimen/view_margin_small"
-        tools:text="状态：ON"/>
+        android:layout_toRightOf="@id/image_device"
+        tools:text="状态：ON" />
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_device_status"
+        android:id="@+id/image_device_state"
         android:layout_width="@dimen/image_size_small"
         android:layout_height="@dimen/image_size_small"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         tools:src="@color/colorNormal"/>
-    <View android:layout_width="match_parent"
+
+    <View
+        android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_toRightOf="@id/image_device"
         android:layout_alignBottom="@id/image_device"
-        android:background="@color/colorDivider"/>
+        android:layout_toRightOf="@id/image_device"
+        android:background="@color/colorDivider" />
 </RelativeLayout>
