--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -27,6 +27,7 @@
                 android:background="@drawable/primary_gradient"
                 android:fitsSystemWindows="true"
                 android:src="@drawable/device_a65"
+                android:transitionName="@string/trans_image_device"
                 app:layout_collapseMode="parallax" />
 
             <include layout="@layout/toolbar_for_collapsing" />
@@ -46,6 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabBackground="@color/colorPrimary"
+            app:tabGravity="fill"
+            app:tabMaxWidth="0dp"
             app:tabSelectedTextColor="@color/colorWhite"
             app:tabTextColor="@color/colorWhite"></android.support.design.widget.TabLayout>
 
