--- a/app/src/main/res/layout/login_cloud.xml
+++ b/app/src/main/res/layout/login_cloud.xml
@@ -2,12 +2,9 @@
 <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fab_server"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|end"
+    style="@style/FAB"
     android:layout_alignParentRight="true"
     android:layout_alignParentBottom="true"
-    android:layout_margin="@dimen/view_margin_normal"
     android:src="@drawable/ic_cloud">
 
 </android.support.design.widget.FloatingActionButton>
