--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,4 +102,18 @@
         <item name="android:textSize">@dimen/font_big</item>
     </style>
 
+    <style name="HorProgressBar" parent="Base.Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:id">@id/progress</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:indeterminate">true</item>
+    </style>
+
+    <style name="FAB">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom|right</item>
+        <item name="android:layout_margin">@dimen/view_margin_normal</item>
+    </style>
+
 </resources>
