--- a/app/src/main/res/layout/item_card_sub.xml
+++ b/app/src/main/res/layout/item_card_sub.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="tag"
             type="com.xseec.eds.model.tags.Tag" />
@@ -20,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/view_margin_tiny"
+                android:textColor="@color/colorPrimary"
                 android:text="@{tag.tagAlias}" />
 
             <TextView
@@ -29,10 +31,12 @@
                 android:layout_marginVertical="@dimen/view_margin_tiny"
                 android:gravity="right"
                 android:text="@{tag.tagValue}"
-                android:textColor="@color/colorPrimaryText"/>
+                android:textColor="@color/colorPrimaryText" />
         </LinearLayout>
 
-        <View style="@style/DividerLine"
+        <View
+            android:id="@+id/view_divider"
+            style="@style/DividerLine"
             android:layout_margin="0dp"/>
     </LinearLayout>
 </layout>
