--- a/app/src/main/res/layout/login_content.xml
+++ b/app/src/main/res/layout/login_content.xml
@@ -56,12 +56,8 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_sign_in"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/font_big"
-            android:background="@drawable/button_radius_conner"/>
+            style="@style/RadiusButton"
+            android:text="@string/login_sign_in"/>
         <ProgressBar
             android:id="@+id/progress_login"
             android:layout_width="wrap_content"
