--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,12 +7,15 @@
         <item android:id="@+id/nav_schedule"
             android:title="@string/nav_schedule"
             android:icon="@drawable/nav_schedule"/>
-        <item android:id="@+id/nav_alarm"
-            android:title="@string/nav_alarm"
-            android:icon="@drawable/nav_alarm"/>
         <item android:id="@+id/nav_trend"
             android:title="@string/nav_trend"
             android:icon="@drawable/nav_trend"/>
+        <item android:id="@+id/nav_alarm"
+            android:title="@string/nav_alarm"
+            android:icon="@drawable/nav_alarm"/>
+        <item android:id="@+id/nav_action"
+            android:title="@string/nav_action"
+            android:icon="@drawable/nav_action"/>
         <item android:id="@+id/nav_setting"
             android:title="@string/nav_setting"
             android:icon="@drawable/nav_setting"/>
