--- a/app/src/main/res/layout/fragment_tab_control.xml
+++ b/app/src/main/res/layout/fragment_tab_control.xml
@@ -1,5 +1,6 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,7 +37,8 @@
             android:padding="@dimen/view_padding_normal"
             android:text="@string/device_on"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/font_display" />
+            android:textSize="@dimen/font_display"
+            android:enabled="false"/>
 
         <Button
             android:id="@+id/btn_off"
@@ -49,7 +51,8 @@
             android:padding="@dimen/view_padding_normal"
             android:text="@string/device_off"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/font_display" />
+            android:textSize="@dimen/font_display"
+            android:enabled="false"/>
 
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
