--- a/app/src/main/res/layout/image_for_collapsing.xml
+++ b/app/src/main/res/layout/image_for_collapsing.xml
@@ -2,9 +2,5 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/image_area"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:scaleType="centerCrop"
-    android:src="@drawable/area_xs"
-    app:layout_collapseMode="parallax" />
+    style="@style/ImageForCollapsing"
+    android:src="@drawable/area_xs" />
