--- a/app/src/main/res/layout/item_workorder.xml
+++ b/app/src/main/res/layout/item_workorder.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/view_margin_small"
+        android:layout_marginVertical="@dimen/view_margin_tiny"
         android:orientation="horizontal">
 
         <TextView
@@ -28,7 +28,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/view_margin_small"
+        android:layout_marginVertical="@dimen/view_margin_tiny"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -56,6 +56,5 @@
 
     <View
         android:id="@+id/view_divider"
-        style="@style/DividerLine"
-        android:layout_margin="0dp" />
+        style="@style/DividerLine" />
 </LinearLayout>
