--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="view_margin_tiny">4dp</dimen>
     <dimen name="view_header_hei">180dp</dimen>
     <dimen name="image_size">64dp</dimen>
+    <dimen name="image_size_normal">48dp</dimen>
     <dimen name="image_size_small">24dp</dimen>
     <dimen name="card_image_hei">240dp</dimen>
     <dimen name="button_radius">24dp</dimen>
@@ -15,6 +16,7 @@
     <dimen name="view_padding_normal">16dp</dimen>
 
     <dimen name="device_list_size">80dp</dimen>
+    <dimen name="workorder_list_image">120dp</dimen>
 
     <!--Detail-->
     <dimen name="card_width_port">80dp</dimen>
