--- a/app/src/main/res/layout/toolbar_for_collapsing.xml
+++ b/app/src/main/res/layout/toolbar_for_collapsing.xml
@@ -5,4 +5,5 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:elevation="4dp"
     app:layout_collapseMode="pin"></android.support.v7.widget.Toolbar>
