--- a/app/src/main/res/layout/item_overview_record.xml
+++ b/app/src/main/res/layout/item_overview_record.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Card">
 
     <LinearLayout
@@ -11,47 +10,5 @@
         <TextView
             style="@style/CardTextTitle"
             android:text="@string/device_record" />
-
-        <LinearLayout style="@style/LinearLayoutHorBasicItem">
-
-            <ImageView
-                style="@style/ImageBasicItem"
-                android:layout_marginLeft="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_normal"
-                android:src="@drawable/circle_peak" />
-
-            <TextView
-                style="@style/TextBasicItemName"
-                android:text="@string/device_peak" />
-
-            <TextView
-                android:id="@+id/text_peak"
-                style="@style/TextBasicItemValue"
-                android:layout_marginRight="@dimen/view_margin_normal" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginHorizontal="@dimen/view_margin_normal"
-            android:background="@color/colorDivider" />
-
-        <LinearLayout style="@style/LinearLayoutHorBasicItem">
-
-            <ImageView
-                style="@style/ImageBasicItem"
-                android:layout_marginLeft="@dimen/view_margin_normal"
-                android:layout_marginVertical="@dimen/view_margin_normal"
-                android:src="@drawable/circle_danger" />
-
-            <TextView
-                style="@style/TextBasicItemName"
-                android:text="@string/device_trip" />
-
-            <TextView
-                android:id="@+id/text_trip"
-                style="@style/TextBasicItemValue"
-                android:layout_marginRight="@dimen/view_margin_normal" />
-        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
