--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,8 @@
     <dimen name="image_size">64dp</dimen>
     <dimen name="image_size_normal">48dp</dimen>
     <dimen name="image_size_small">24dp</dimen>
-    <dimen name="card_image_hei">240dp</dimen>
+    <dimen name="zone_image_hight">240dp</dimen>
+    <dimen name="zone_image_width">120dp</dimen>
     <dimen name="button_radius">24dp</dimen>
     <dimen name="dialog_corners">2dp</dimen>
 
@@ -26,8 +27,4 @@
     <dimen name="font_normal">14sp</dimen>
     <dimen name="font_big">20sp</dimen>
     <dimen name="font_display">34sp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 </resources>
