大字体界面优化

--- a/app/src/main/res/layout/activity_workorder.xml
+++ b/app/src/main/res/layout/activity_workorder.xml
@@ -103,6 +103,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
+                    android:layout_gravity="center_vertical"
                     android:scaleType="fitEnd"
                     android:src="@drawable/ic_call_blue_500_24dp"/>
             </LinearLayout>
