--- a/app/src/main/res/layout/login_top.xml
+++ b/app/src/main/res/layout/login_top.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/view_margin_normal"
+        android:layout_marginHorizontal="@dimen/view_margin_normal"
         android:text="@string/login_title"
         android:textSize="@dimen/font_display"
         android:textColor="@color/colorWhite"
