--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
     <style name="ImageBasicItem">
         <item name="android:layout_width">@dimen/image_size_small</item>
         <item name="android:layout_height">@dimen/image_size_small</item>
+        <item name="android:layout_gravity">center_vertical</item>
     </style>
 
     <style name="TextBasicItemName">
@@ -29,14 +30,18 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_margin">@dimen/view_margin_tiny</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="TextBasicItemValue">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">3</item>
+        <item name="android:layout_weight">2.5</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="DividerLine">
@@ -183,6 +188,8 @@
         <item name="android:layout_weight">3</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="photo_picker_dialog_anim">
