--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Card">
-    <RelativeLayout
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <com.xseec.eds.widget.ReportItemView
+        android:id="@+id/report_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/view_margin_small"
-            />
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+
+    </com.xseec.eds.widget.ReportItemView>
+</FrameLayout>
+
