--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -198,4 +198,12 @@
         <item name="android:windowExitAnimation">@anim/anim_photo_dialog_out</item>
     </style>
 
+    <!--nj  item Report布局样式-->
+    <style name="ReportItem">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+    </style>
 </resources>
