--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -23,7 +23,7 @@
     <group android:id="@+id/group_others">
         <item android:id="@+id/nav_setting"
             android:title="@string/nav_setting"
-            android:icon="@drawable/nav_setting"/>
+            android:icon="@drawable/nav_customize"/>
         <item android:id="@+id/nav_exit"
             android:title="@string/nav_exit"
             android:icon="@drawable/nav_exit"/>
